objects/Asset.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__AmountAvailableForWithdrawal__c</fullName>
        <description>Amount currently available for withdrawal from the account.</description>
        <label>Available for Withdrawal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AnnualPremium__c</fullName>
        <description>The amount that must be paid each year in order to keep the insurance policy active.</description>
        <label>Annual Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicationSubmitDate__c</fullName>
        <description>The date the application was originally submitted to the carrier for the current policy.</description>
        <label>Application Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetReferenceId__c</fullName>
        <description>Unique identifier of the asset. Used by Vlocity CPQ to track the asset across various objects in the asset-based ordering lifecycle. Populate this field with some globally unique identifier if the asset is created/mastered in an external system. When assets are created from a completed order by Vlocity, the globally unique identifier is pulled from the order line item.</description>
        <label>Asset Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeMetadataChanges__c</fullName>
        <label>Attribute Metadata Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <description>JSON body containing selected attribute values for this asset.</description>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AutomaticPaymentAmount__c</fullName>
        <description>The amount to be automatically paid each billing cycle.</description>
        <label>Automatic Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AutomaticRebalancing__c</fullName>
        <description>For annuities or investment accounts, whether automatic rebalancing of the holdings to match a target asset allocation is elected or not elected.</description>
        <label>Automatic Rebalancing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Elected</fullName>
                </value>
                <value>
                    <fullName>Not Elected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__BenefitPlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For an employee&apos;s enrollment in a group benefit plan, this field identifies the plan in which the employee is enrolled.</description>
        <label>Plan</label>
        <referenceTo>vlocity_ins__ContractLineItem__c</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>PlanEnrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillDeliveryMethod__c</fullName>
        <description>The method to be used for delivering the bill or statement to the customer each billing cycle such as mail or email.</description>
        <label>Bill Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillDueDate__c</fullName>
        <description>Due date for billing.</description>
        <label>Bill Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillStatus__c</fullName>
        <description>Status of the bill.</description>
        <label>Bill Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillType__c</fullName>
        <description>Type of bill.</description>
        <label>Bill Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the Billing Account which defines the billing profile for this held product (if billing accounts are used).</description>
        <label>Billing Account</label>
        <referenceTo>vlocity_ins__BillingAccount__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingCity__c</fullName>
        <description>The City portion of the billing address for this held product.</description>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the Contact to whom the bill or statement should be sent.</description>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingCountry__c</fullName>
        <description>The Country portion of the billing address for this held product.</description>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingEmail__c</fullName>
        <description>The email address to which the bill or statement should be sent.</description>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingFrequency__c</fullName>
        <description>The billing frequency for this held product such as annually, quarterly or monthly.</description>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Semi-Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingMethod__c</fullName>
        <description>Method of billing such as direct bill, payroll deduction, billing account or agent collect.</description>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Collect</fullName>
                </value>
                <value>
                    <fullName>Billing Account</fullName>
                </value>
                <value>
                    <fullName>Direct Bill</fullName>
                </value>
                <value>
                    <fullName>Payroll Deduction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingPostalCode__c</fullName>
        <description>The Postal Code portion of the billing address for this held product.</description>
        <label>Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingState__c</fullName>
        <description>The State or Province portion of the billing address for this held product.</description>
        <label>Billing State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingStreet__c</fullName>
        <description>The Street portion of the billing address for this held product.</description>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CarrierId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The carrier, writing company or brand that offers and/or underwrites the insurance policy or financial account.</description>
        <label>Carrier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Carrier</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Held Products (Carrier)</relationshipLabel>
        <relationshipName>CarrierAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CashSurrenderValue__c</fullName>
        <description>The amount of money that will be paid to the owner of an insurance policy after surrender penalties if the policy is voluntarily surrendered prior to the event that is insured. Cash surrender value mostly applies to life insurance policies, specifically whole life insurance policies.</description>
        <label>Cash Surrender Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CashValue__c</fullName>
        <description>The current accumulated cash value of this policy.</description>
        <label>Cash Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CatalogItemReferenceDateTime__c</fullName>
        <label>Reference Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CostBasis__c</fullName>
        <description>The amount that is subtracted from proceeds to determine gain for income tax purposes.</description>
        <label>Cost Basis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DaysToExpire__c</fullName>
        <description>Formula: Number of days till the expiration date.</description>
        <formula>vlocity_ins__ExpirationDate__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Expire</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DeathBenefit__c</fullName>
        <description>The amount on a life insurance policy, annuity or pension that is payable to the beneficiary when the insured or annuitant passes away.</description>
        <label>Death Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveDate__c</fullName>
        <description>The beginning of the most recent term for this policy. This defines when the responsibilities of, and benefits to, all parties kick in for the most recent term. For policies subject to periodic renewal, the effective date reflects the most recent renewal.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveTerm__c</fullName>
        <description>Formula: [effective date] - [expiration date]. Textual description of the effective term, for example, 12/10/2014-12/10/2020.</description>
        <formula>TEXT(vlocity_ins__EffectiveDate__c) &amp;&apos; - &apos;&amp; TEXT(vlocity_ins__ExpirationDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExpirationDate__c</fullName>
        <description>The scheduled termination date for the current term of the insurance policy, at which coverage ends if not renewed.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExpiredPolicyAssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ExpiredPolicyAssetId</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Assets (ExpiredPolicyAssetId)</relationshipLabel>
        <relationshipName>ExpiredPolicy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FaceAmount__c</fullName>
        <description>The sum of money for which an insurance cover is obtained, usually shown on the top sheet (face) of the policy. In life insurance, the sum paid on the policy&apos;s maturity date, on the death of the insured or on some other contracted term.</description>
        <label>Face Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GracePeriodEndDate__c</fullName>
        <description>End date of policy grace period.</description>
        <label>Grace Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GracePeriodStartDate__c</fullName>
        <description>Start date of policy grace period.</description>
        <label>Grace Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupNumber__c</fullName>
        <description>The group identification associated to the account for health insurance. It is usually stamped on member Id card.</description>
        <label>Group Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GuaranteePeriod__c</fullName>
        <description>Text description of the guarantee period.</description>
        <label>Guarantee Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GuaranteedDeathBenefit__c</fullName>
        <description>For annuities, the amount of benefit guaranteed to be paid to beneficiaries upon the death of the annuitant.</description>
        <label>Guaranteed Death Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ImageId__c</fullName>
        <formula>Product2.vlocity_ins__ImageId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image &amp; Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InCartQuantityMap__c</fullName>
        <description>JSON field with the following structure: {&quot;[childProductId]&quot;: [quantity], ....} that describes the child item quantities that roll-up to the quantity of this item. For example, {&quot;01t0O00000BPrs1QAD&quot;:1,&quot;01t0O00000BPrrwQAD&quot;:1}. The quantity value is the sum of quantities for that product across all instances on the child assets. For example, if two child assets exist of type Product A, the first with quantity 2 and the second with quantity 1, the map quantity for Product A should be 3. Helps CPQ identify quantities and enforce cardinality rules. Must be populated for all assets that have direct children, but it does not need to be populated for virtual products or assets with no children. Also, child virtual products should not be included in the map on their parent asset.</description>
        <label>InCartQuantityMap</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InceptionDate__c</fullName>
        <description>The date when the policy was first issued, which defines the actual date when policy coverages went into effect. Before the date of inception, the policyholder does not have coverage.</description>
        <label>Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InitialDeposit__c</fullName>
        <description>The amount initially deposited in the account, annuity or policy.</description>
        <label>Initial Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InventoryItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Item</label>
        <referenceTo>vlocity_ins__InventoryItem__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsAutomaticPaymentEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if automatic payment is enabled for this held product.</description>
        <label>Enable Automatic Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JSONAttribute__c</fullName>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Jurisdiction__c</fullName>
        <description>The jurisdiction which governs and authorizes this policy or financial account.</description>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineNumber__c</fullName>
        <description>Vlocity line number copied from the order which assists in sequencing the assets and organizing them into a hierarchy.</description>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineOfBusinessCode__c</fullName>
        <description>Formula: the developer name of record type.</description>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Of Business Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineofBusiness__c</fullName>
        <description>Formula: Developer Name of the Record Type of this Asset, which typically indicates the line of business of the held product.</description>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MemberIdentifier__c</fullName>
        <description>The member identification associated to the account for health insurance. It is usually stamped on member Id card.</description>
        <externalId>true</externalId>
        <label>Member ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MonthlyPremium__c</fullName>
        <label>Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NextPaymentAmountDueDate__c</fullName>
        <description>Due date for next payment amount.</description>
        <label>Next Payment Amount Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NextPaymentAmountDue__c</fullName>
        <label>Next Payment Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OpenClaimCount__c</fullName>
        <description>Number of currently open claims against this policy.</description>
        <label>Open Claim Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrderProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order Product from which this asset was created or most recently updated.</description>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalExpirationDate__c</fullName>
        <description>The original scheduled termination date for the current term of the insurance policy, at which coverage ends if not renewed.</description>
        <label>Original Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the original version of the current asset.</description>
        <label>Original Version Id</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Original Version Id</relationshipLabel>
        <relationshipName>OriginalVersion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentItemId__c</fullName>
        <description>ID of the parent Asset. Used by Vlocity CPQ to track the hierarchy of assets.</description>
        <label>ParentItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PastDue__c</fullName>
        <label>Past Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PaymentMethodId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The saved payment method such as a credit card to use for automatic payment of billings and charges.</description>
        <label>Payment Method</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__PaymentMethod__c.vlocity_ins__AccountId__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__PaymentMethod__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyAssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For financial accounts tied to an insurance offering, such as an annuity, this identifies the annuity or policy to which this financial account is tied.</description>
        <label>Policy</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>PolicyFinancialAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyPaidToDate__c</fullName>
        <description>Policy paid to date.</description>
        <label>Policy Paid To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PreviousVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the previous version of the current asset.</description>
        <label>Previous Version Id</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Previous Version Id</relationshipLabel>
        <relationshipName>PreviousVersion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_ins__PriceList__c</referenceTo>
        <relationshipLabel>Assets Using This Price List</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricebookEntryId__c</fullName>
        <description>PricebookEntryId</description>
        <inlineHelpText>PricebookEntryId</inlineHelpText>
        <label>PricebookEntryId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingLogData__c</fullName>
        <description>Detailed pricing log information for this asset stored as a JSON structure. The JSON records the detailed prices, adjustments and interim calculations which result in the price to the customer.</description>
        <label>Pricing Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryProducerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary agent, broker or advisor who produced, or sold, this policy or financial account.</description>
        <label>Primary Producer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Produced Products</relationshipLabel>
        <relationshipName>ProducerAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductHierarchyPath__c</fullName>
        <description>Vlocity internal field which identifies the path for this asset within the product hierarchy.</description>
        <label>Product Hierarchy Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProvisioningStatus__c</fullName>
        <label>Provisioning Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QualifiedType__c</fullName>
        <description>For annuities, identifies whether this annuity is &quot;qualified&quot; or &quot;non-qualified&quot; for income tax purposes.</description>
        <label>Qualified Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Qualified</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__RatePlan__c</fullName>
        <description>Rate plan description.</description>
        <label>Rate Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RateState__c</fullName>
        <description>The state or other jurisdiction governing the rating of this policy.</description>
        <label>Rate State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReferencePolicyNumber__c</fullName>
        <externalId>true</externalId>
        <label>Reference Policy Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>